@@ -1,6 +1,7 @@
 #pragma once
 #include "Game/Lara/lara_struct.h"
 
+void BackupLara();
 void InitializeLara(bool restore);
 void InitializeLaraMeshes(ItemInfo* item);
 void InitializeLaraAnims(ItemInfo* item);
