@@ -1288,6 +1288,7 @@ bool LoadLevelFile(int levelIndex)
 {
 	TENLog("Loading level file...", LogLevel::Info);
 
+	BackupLara();
 	CleanUp();
 	FreeLevel();
 	
